# polaris

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  Makefile  README.md  randomwalk.cfg  serial.cfg
client-server/: client.cpp  client.py  server.cpp
cmake/: polarisConfig.cmake.in
coating/: Makefile  client.py  coating.cfg  server.py
coating/include/: PTConverter.h
coating/src/: PTConverter.cpp
demo/: Makefile  client.py  randomwalk.cfg
demo/include/: RandomWalkDAQ.h  RandomWalkRecorder.h  RootGraphics.h
demo/src/: RandomWalkDAQ.cpp  RandomWalkRecorder.cpp  RootGraphics.cpp
demo0/: demo0.cfg
demo1/: demo1.cfg
demo1/include/: RandomWalkDAQ.h  RandomWalkRecorder.h
demo1/src/: RandomWalkDAQ.cpp  RandomWalkRecorder.cpp
demo2/: Makefile  client.py  demo2.cfg  demo3.cfg  server.py
demo2/include/: RootGraphics.h
demo2/src/: RootGraphics.cpp
drying/: Makefile  drying.cfg
drying/include/: KJLGaugeConverter.h  SerialDAQ.h
drying/src/: KJLGaugeConverter.cpp  SerialDAQ.cpp
exe/: polaris.cpp  serial.cpp
exe/test/: test.cfg  testConfigParser.cpp  testMultiThreading.cpp  testSerializer.cpp
include/: AsciiRecorder.h  ConfigParser.h  RandomWalkDAQ.h  RandomWalkPlotter.h  RawRecorder.h  SerialDAQ.h  circular_buffer.h  plrsBaseData.h  plrsController.h  plrsModuleDAQ.h  plrsModuleGraphics.h  plrsModuleInput.h  plrsModuleInterface.h  plrsModuleRecorder.h  plrsSocket.h  plrsStateMachine.h  socketunix.h
pycmap/: pycmap.cfg  pycwave.cfg  testport.cpp
pycmap/include/: PyCMapDAQ.h  PyCMapGraphics.h  PyCScope.h  serialport.h
pycmap/src/: PyCMapDAQ.cpp  PyCMapGraphics.cpp  PyCScope.cpp  PyCWaveDAQ.cpp  PyCWaveGraphic.cpp  serialport.cpp
pyromap/: Makefile  calibration.cfg  pycmap.cfg  pyromap.cfg  pyroview.cpp  survey.cfg
pyromap/include/: PyCMapDAQ.h  PyCMapGraphics.h  PyCWaveDAQ.h  PyCWaveGraphics.h
pyromap/src/: PyCMapDAQ.cpp  PyCMapGraphics.cpp
saber/: Makefile  saber.cfg
saber-specific/: CAENV1495Parameter.cpp  CAENV1720.cpp  CAENV1720Parameter.cpp  SaberDAQ.h  SaberDAQData.h  SaberGraphics.h  VMEBoard.h
saber/include/: CAENV1495.h  CAENV1495Parameter.h  CAENV1720.h  CAENV1720Parameter.h  SaberBoardRawData.h  SaberDAQ.h  SaberDAQData.h  SaberDAQHeader.h  SaberDiskRecorder.h  SaberGraphics.h  VMEBoardParameter.h  gnuplot_cpp.h
saber/src/: CAENV1495.cpp  CAENV1495Parameter.cpp  CAENV1720.cpp  CAENV1720Parameter.cpp  SaberBoardRawData.cpp  SaberDAQ.cpp  SaberDAQData.cpp  SaberDiskRecorder.cpp  SaberGraphics.cpp  VMEBoardParameter.cpp  gnuplot_cpp.cpp
serial/: Makefile  client.py  light-off.txt  morning.txt  randomwalk.cfg  serial.cfg  serial_vt.cfg
serial/include/: RandomWalkDAQ.h  RandomWalkGnuplot.h  RandomWalkGraphics.h  RandomWalkRecorder.h  RootGraphics.h  SerialDAQ.h  SerialGnuplot.h  SerialVtDAQ.h  SerialVtProc.h  VtGraphics.h  VtRecorder.h  serialport.h
serial/src/: RandomWalkDAQ.cpp  RandomWalkGnuplot.cpp  RandomWalkGraphics.cpp  RandomWalkRecorder.cpp  RootGraphics.cpp  SerialDAQ.cpp  SerialGnuplot.cpp  SerialVtDAQ.cpp  SerialVtProc.cpp  VtGraphics.cpp  VtRecorder.cpp  serialport.cpp
src/: AsciiRecorder.cpp  ConfigParser.cpp  RandomWalkDAQ.cpp  RandomWalkRecorder.cpp  RawRecorder.cpp  gnuplot_cpp.cpp  plrsBaseData.cpp  plrsController.cpp  plrsModuleDAQ.cpp  plrsModuleGraphics.cpp  plrsModuleInput.cpp  plrsModuleInterface.cpp  plrsModuleRecorder.cpp  plrsSocket.cpp  plrsStateMachine.cpp  serialport.cpp  socketunix.cpp
